<resources>
    <string name="sobot_app_name">智齿-Demo</string>
    <string name="sobot_hello_world">Hello world!</string>
    <string name="sobot_action_settings">Settings</string>
    <string name="sobot_restart_talk">新会话</string>
    <string name="sobot_not_read">条未读消息</string>
    <string name="sobot_rl_not_read">以下为未读消息</string>
    <string name="sobot_choice_test">选择咨询内容</string>
    <string name="sobot_custom_please">客服邀请您对本次</string>
    <string name="sobot_custom_please1">服务进行评价</string>
    <string name="sobot_button_send">发送</string>
    <string name="sobot_attach_smile">表情</string>
    <string name="sobot_attach_picture">图片</string>
    <string name="sobot_save_pic">保存图片</string>
    <string name="sobot_attach_take_pic">拍照</string>
    <string name="sobot_btn_submit_text">提交评价</string>
    <string name="sobot_attach_location">位置</string>
    <string name="sobot_attach_file">文件</string>
    <string name="sobot_attach_voice_call">语音电话</string>
    <string name="sobot_please">SOBOT SDK  1.4.3</string>
    <string name="sobot_value"></string>
    <string name="sobot_user_card">名片</string>
    <string name="sobot_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="sobot_release_to_cancel">松开手指，取消发送</string>
    <string name="sobot_send_fail">发送消息失败,</string>
    <string name="sobot_delete_message">删除消息</string>
    <string name="sobot_copy_message">复制消息</string>
    <string name="sobot_delete_voice">删除语音</string>
    <string name="sobot_delete_video">删除视频</string>
    <string name="sobot_delete">删除</string>
    <string name="sobot_end">结束本次对话?</string>
    <string name="sobot_upload">图片</string>
    <string name="sobot_resend">点击重新发送</string>
    <string name="sobot_confirm_resend">确认重发该信息？</string>
    <string name="sobot_connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="sobot_network_unavailable">当前网络不可用，请检查您的网络设置</string>
    <string name="sobot_init_loading_wrong">加载错误</string>
    <string name="sobot_copy">复制</string>
    <string name="sobot_forward">转发</string>
    <string name="sobot_button_logout">退出登录</string>
    <string name="sobot_button_uploadlog">上传运行日志</string>
    <string name="sobot_ok">确定</string>
    <string name="sobot_cancel">取消</string>
    <string name="sobot_prompt">提示</string>
    <string name="sobot_clear_records">清空记录</string>
    <string name="sobot_clear_all_records">是否清空所有聊天记录？</string>
    <string name="sobot_location_recv">[%1$s的位置]</string>
    <string name="sobot_location_message">位置信息</string>
    <string name="sobot_recording_video">录制视频</string>
    <string name="sobot_location_prefix">[我的位置]</string>
    <string name="sobot_voice">[语音]</string>
    <string name="sobot_picture">[图片]</string>
    <string name="sobot_video">[视频]</string>
    <string name="sobot_file">[文件]</string>
    <string name="sobot_voice_call">[语音通话]</string>
    <string name="sobot_button_cancel">取消</string>
    <string name="sobot_button_cancel1">立即结束</string>
    <string name="sobot_button_save">保存</string>
    <string name="sobot_button_search">查找</string>
    <string name="sobot_button_add">添加</string>
    <string name="sobot_search_header">搜</string>
    <string name="sobot_network_isnot_available">网络不可用</string>
    <string name="sobot_recoding_fail">录音失败，请重试！</string>
    <string name="sobot_select_contacts">选择联系人</string>
    <string name="sobot_confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="sobot_logout">退出登录</string>
    <string name="sobot_close_session">结束本次对话？</string>
    <string name="sobot_logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="sobot_exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="sobot_dissolution_group_hint">退出后，此群将被解散</string>
    <string name="sobot_exit_group">退出</string>
    <string name="sobot_connect_conflict">同一帐号已在其他设备登录</string>
    <string name="sobot_em_user_remove">此用户已被移除</string>
    <string name="sobot_welcome">loading\.\.\.</string>
    <string name="sobot_robot">机械人乐乐</string>
    <string name="sobot_submit">提交</string>
    <string name="sobot_question">是否解决了您的问题？</string>
    <string name="sobot_questionone">是否有以下情况？</string>
    <string name="sobot_edittext_hint">欢迎给我们的服务提建议</string>
    <string name="sobot_chat_content">聊天内容</string>
    <string name="sobot_voiceTooShort">语音时长不能少于一秒钟</string>
    <string name="sobot_voiceTooLong">录音时间过长</string>
    <string name="sobot_dcrc">评价客服</string>
    <string name="sobot_questiontwo">请监督客服是否有以下问题</string>
    <string name="sobot_nomore">已无更多</string>
    <string name="sobot_rengongservice">人工服务</string>
    <string name="sobot_xlistview_header_hint_normal">查看更多历史记录</string>
    <string name="sobot_xlistview_header_hint_ready">松开刷新数据</string>
    <string name="sobot_xlistview_header_hint_loading">正在加载</string>
    <string name="sobot_xlistview_header_last_time">上次查看时间：</string>
    <string name="sobot_xlistview_footer_hint_normal">查看更多</string>
    <string name="sobot_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="sobot_str_bottom_message">留言</string>
    <string name="sobot_str_bottom_satisfaction">满意度</string>
    <string name="sobot_yes">是</string>
    <string name="sobot_no">否</string>
    <string name="sobot_outline_managerOutLine">有事离开</string>
    <string name="sobot_outline_leverByManager"> 结束了本次会话 </string>
    <string name="sobot_outline_JoinBlacklistByManager"> 结束了本次会话</string>
    <string name="sobot_outline_LongTimeNoSay">由于您长时间未说话，会话已结束</string>
    <string name="sobot_outline_openNewWindows">打开新窗口</string>
    <string name="sobot_current_network">当前网络不可用,请检查网络设置</string>
    <string name="sobot_reunicon">点击重新连接</string>
    <string name="sobot_btn_start">启动</string>
    <string name="sobot_read_all">阅读全文>></string>
    <string name="sobot_appkey">请输入您的AppKey</string>
    <string name="sobot_userID">请输入用户ID</string>
    <string name="sobot_resendmsg">重新发送消息？</string>
    <string name="sobot_colse">关闭</string>
    <string name="sobot_back">返回</string>
    <string name="sobot_btn_cancle">取消</string>
    <string name="sobot_post_msg_top">您好，很抱歉我们的在线客服暂时无法为您提供服务</string>
    <string name="sobot_post_msg_top1">如需帮助，请留言，我们将尽快联系您~</string>
    <string name="sobot_post_msg_hint_email">邮箱</string>
    <string name="sobot_post_msg_hint_content">您好，为了更好地解决您的问题，请告诉我们以下内容:\n1.您的姓名\n2.问题描述</string>
    <string name="app_name">逐梦</string>
    <string name="exit">退出</string>
    <string name="network_er">网络错误</string>
    <string name="network_hint">请检测网络是否连接</string>
    <string name="screen_next">跳过 ></string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="close">关闭</string>
    <string name="dream">首页</string>
    <string name="the_new">最新揭晓</string>
    <string name="openlist">晒单</string>
    <string name="share_show">晒单分享</string>
    <string name="all_goods">发现</string>
    <string name="shopping_car">购物车</string>
    <string name="my_dream">我</string>
    <string name="popularity">人气</string>
    <string name="popularity_tui">人气推荐</string>
    <string name="abt_open">即将揭晓</string>
    <string name="new_cmm">最新</string>
    <string name="value">价值</string>
    <string name="group">分类</string>
    <string name="most_reviewed">评论最多</string>
    <string name="the_popular_openlist">人气晒单</string>
    <string name="the_new_openlist">最新晒单</string>
    <string name="press_back_to_exit">再按一次返回键退出</string>
    <string name="winner">获得者</string>
    <string name="help">帮助</string>
    <string name="customer_service_center">帮助中心</string>
    <string name="cum">进度</string>
    <string name="need_men">总需</string>
    <string name="good_facation">商品分类</string>
    <string name="good_xiangou">限购专区</string>
    <string name="get_hongbao">赚红包</string>
    <string name="good_one">全部商品</string>
    <string name="good_two">手机数码</string>
    <string name="good_three">电脑办公</string>
    <string name="good_four">数码影音</string>
    <string name="good_five">女性时尚</string>
    <string name="good_six">全球美食</string>
    <string name="good_seven">潮流新品</string>
    <string name="good_eight">礼品箱包</string>
    <string name="good_ten">旅游度假</string>
    <string name="good_nine">其他商品</string>
    <string name="my_dreamed">我的逐梦记录</string>
    <string name="get_shopping">获得的商品</string>
    <string name="my_openlist">我的晒单</string>
    <string name="my_g">我的福分</string>
    <string name="share_for_money">分享赚钱</string>
    <string name="get_help">帮助中心</string>
    <string name="address_management">地址管理</string>
    <string name="security_setting">安全设置</string>
    <string name="exit_user">退出登录</string>
    <string name="to_recharge">去充值</string>
    <string name="available_g">可以福分</string>
    <string name="balance">余额</string>
    <string name="settlement">结算</string>
    <string name="buy_list">云购记录</string>
    <string name="buytimes">云购次数</string>
    <string name="search">搜索</string>
    <string name="accounthint">手机号码</string>
    <string name="passwordhint">密码</string>
    <string name="login">登录</string>
    <string name="login_title">密码登陆</string>
    <string name="register">注册</string>
    <string name="phote_login">手机号快捷登录</string>
    <string name="warn">《逐梦协议》</string>
    <string name="user_warn">《逐梦用户协议》</string>
    <string name="forgeted_password">忘记密码？</string>
    <string name="send_word">发送验证码</string>
    <string name="ve_code_hint">验证码</string>
    <string name="oldpassword">原密码</string>
    <string name="newpassword">输入新密码</string>
    <string name="input_password">输入密码</string>
    <string name="sure">确定</string>
    <string name="register_title">注册逐梦</string>
    <string name="forget_title">忘记密码</string>
    <string name="phote_title">手机验证登录</string>
    <string name="acount_login">密码登录</string>
    <string name="kj_login">快捷登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="weixin_login">微信登录</string>
    <string name="look_code">查看逐梦码</string>
    <string name="open">展开</string>
    <string name="allcount">总需人次:</string>
    <string name="issueid">期号ID:</string>
    <string name="buycount">本次参与:</string>
    <string name="opentime">揭晓时间:</string>
    <string name="count_hint">期</string>
    <string name="add_hint">次</string>
    <string name="shopping">进行中...</string>
    <string name="see_detail">点击查看商品详情</string>
    <string name="goodconunt">期号:</string>
    <string name="goodsy">剩余</string>
    <string name="dream_progress">逐梦进度:</string>
    <string name="good_allconut">总需人数</string>
    <string name="not_join_hint">你还没有参与本期逐梦哦</string>
    <string name="login_hint">就可以看到自己参加的咯</string>
    <string name="page_before">上一页</string>
    <string name="page_next">下一页</string>
    <string name="open_before">往期揭晓</string>
    <string name="dream_start">所有参与记录，从这一刻开始...</string>
    <string name="show_message">晒单详情</string>
    <string name="remove">一</string>
    <string name="add">十</string>
    <string name="buy_ten_times">10人次</string>
    <string name="buy_fifty_times">50人次</string>
    <string name="buy_hundred_times">100人次</string>
    <string name="all_sy">包尾</string>
    <string name="random_num">用户随机数</string>
    <string name="random_btn_hint">随机一下</string>
    <string name="random_one">1</string>
    <string name="random_two">2</string>
    <string name="random_three">3</string>
    <string name="random_four">4</string>
    <string name="random_five">5</string>
    <string name="random_six">6</string>
    <string name="random_seven">7</string>
    <string name="random_eight">8</string>
    <string name="dream_list">逐梦记录</string>
    <string name="cometrue_dream">实现的梦想</string>
    <string name="he_showlist">TA的晒单</string>
    <string name="userid_hint">用户ID: </string>
    <string name="usernname_hint">用户昵称: </string>
    <string name="save">保存</string>
    <string name="newpwd">新密码</string>
    <string name="input_newpwd_again">请再次输入密码</string>
    <string name="enter_newpwd">确定密码</string>
    <string name="dream_all">全部</string>
    <string name="dream_ing">进行中</string>
    <string name="dream_finish">已揭晓</string>
</resources>